unpackaged/main/default/objects/Contact/fields/Thought_leadership_whitepaper_webinar__c.field-meta.xml
<CustomField>
    <fullName>Thought_leadership_whitepaper_webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Thought Leadership Whitepaper and Webinars</description>
    <label>Thought leadership whitepaper &amp; webinar</label>
    <type>Checkbox</type>
</CustomField>