unpackaged/main/default/objects/Contact/fields/Title_Function_6sense__c.field-meta.xml
<CustomField>
    <fullName>Title_Function_6sense__c</fullName>
    <label>Title Function (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>