unpackaged/main/default/objects/Contact/fields/Title_Level_6sense__c.field-meta.xml
<CustomField>
    <fullName>Title_Level_6sense__c</fullName>
    <label>Title Level (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>