unpackaged/main/default/objects/Contact/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <description>Used by MOPS</description>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>