unpackaged/main/default/objects/Contact/fields/X18_digit_ContactID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_ContactID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(18-digit) Contact ID</label>
    <type>Text</type>
</CustomField>