unpackaged/main/default/objects/Contact/fields/x6sense_Contact_Grade__c.field-meta.xml
<CustomField>
    <fullName>x6sense_Contact_Grade__c</fullName>
    <description>Bucketing of contact intent scores A (86-100), B (61-85), C (41-60), D (0-40).</description>
    <inlineHelpText>Bucketing of contact intent scores A (86-100), B (61-85), C (41-60), D (0-40).</inlineHelpText>
    <label>6sense Contact Grade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>