unpackaged/main/default/objects/Contact/fields/x6sense_Contact_Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>x6sense_Contact_Profile_Fit__c</fullName>
    <description>Bucketing of contact profile scores Strong (&gt; 80), Moderate (50-80), Weak (&lt; 50).</description>
    <inlineHelpText>Bucketing of contact profile scores Strong (&gt; 80), Moderate (50-80), Weak (&lt; 50).</inlineHelpText>
    <label>6sense Contact Profile Fit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>