unpackaged/main/default/objects/Contact/fields/Zapier_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Account_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zapier Account Name</label>
    <type>Text</type>
</CustomField>