unpackaged/main/default/objects/Contact/fields/Zapier_Contact_owner__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Contact_owner__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zapier Contact owner</label>
    <type>Text</type>
</CustomField>