unpackaged/main/default/objects/Contact/validationRules/Email_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_field_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email must be provided in order to save</errorMessage>
</ValidationRule>