unpackaged/main/default/objects/Contact/validationRules/Rejected_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Stage__c ) &amp;&amp;
 ISPICKVAL(Stage__c, &#39;Rejected&#39;) &amp;&amp;
 ISBLANK(TEXT(Rejected_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejected_Reason__c</errorDisplayField>
    <errorMessage>A Rejected Reason is required when marking a Contact as Rejected</errorMessage>
</ValidationRule>