unpackaged/main/default/objects/Contact/listViews/BDR.listView-meta.xml
<ListView>
    <fullName>BDR</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Gong__Current_Flow_Name__c</columns>
    <columns>Gong__Flow_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_MONTHS:24</value>
    </filters>
    <label>BDR - My leads</label>
</ListView>