unpackaged/main/default/objects/Contact/listViews/BDR_Account_Mappign.listView-meta.xml
<ListView>
    <fullName>BDR_Account_Mappign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Gong__Current_Flow_Name__c</columns>
    <columns>Gong__Flow_Status__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Business_Development_Rep__c</field>
        <operation>equals</operation>
        <value>Sara Morrison</value>
    </filters>
    <label>BDR - Account Mappign</label>
</ListView>