unpackaged/main/default/objects/Contact/listViews/Copy_of_BDR_Account_Mappign_Last_Mod.listView-meta.xml
<ListView>
    <fullName>Copy_of_BDR_Account_Mappign_Last_Mod</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Gong__Current_Flow_Name__c</columns>
    <columns>Gong__Flow_Status__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Sara Morrison</value>
    </filters>
    <label>Copy of BDR - Account Mappign Last Mod</label>
</ListView>