unpackaged/main/default/objects/Contact/listViews/Zoominfo_NA_Contact_list_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>Zoominfo_NA_Contact_list_DONOTEDIT</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Email_Address_Domain__c</columns>
    <columns>DOZISF__ZoomInfo_Company_ID__c</columns>
    <columns>ZoomInfo_Contact_ID__c</columns>
    <columns>DOZISF__ZoomInfo_Id__c</columns>
    <columns>Company__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Sales_Division__c</field>
        <operation>contains</operation>
        <value>Americas</value>
    </filters>
    <filters>
        <field>Account.Sales_Division__c</field>
        <operation>notContain</operation>
        <value>EMEA,APAC,Japan</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/1900 12:00 AM</value>
    </filters>
    <label>ZOOMINFO FILTERS - Contacts - DONOTEDIT</label>
</ListView>